--- a/distribution.plist
+++ b/distribution.plist
@@ -1,57 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<!--
-   Property List.plist
-   MINingClient
-
-   Created by 张宁宁 on 2018/6/21.
-   Copyright (c) 2018年 Mr.ZNN. All rights reserved.
--->
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-        <key>items</key>
-        <array>
-            <dict>
-                <key>assets</key>
-                <array>
-                    <dict>
-                        <key>kind</key>
-                        <string>software-package</string>
-                        <key>url</key>
-                        <string>#ipa安装包链接#</string>
-                    </dict>
-                    <dict>
-                        <key>kind</key>
-                        <string>full-size-image</string>
-                        <key>needs-shine</key>
-                        <true/>
-                        <key>url</key>
-                        <string>#57*57图标链接#</string>
-                    </dict>
-                    <dict>
-                        <key>kind</key>
-                        <string>display-image</string>
-                        <key>needs-shine</key>
-                        <true/>
-                        <key>url</key>
-                        <string>#521*521图标链接#</string>
-                    </dict>
-                </array>
-                <key>metadata</key>
-                <dict>
-                    <key>bundle-identifier</key>
-                    <string>#bundle ID#</string>
-                    <key>bundle-version</key>
-                    <string>#版本#</string>
-                    <key>kind</key>
-                    <string>software</string>
-                    <key>subtitle</key>
-                    <string>App</string>
-                    <key>title</key>
-                    <string>#应用名称#</string>
-                </dict>
-            </dict>
-        </array>
-    </dict>
-   
+<dict>
+	<key>items</key>
+	<array>
+		<dict>
+			<key>assets</key>
+			<array>
+				<dict>
+					<key>kind</key>
+					<string>software-package</string>
+					<key>url</key>
+					<string>https://jieao-mining.oss-cn-hangzhou.aliyuncs.com/ios/MiNingClient.ipa</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>full-size-image</string>
+					<key>needs-shine</key>
+					<true/>
+					<key>url</key>
+					<string>https://jieao-mining.oss-cn-hangzhou.aliyuncs.com/ios/icon57.png</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>display-image</string>
+					<key>needs-shine</key>
+					<true/>
+					<key>url</key>
+					<string>https://jieao-mining.oss-cn-hangzhou.aliyuncs.com/ios/icon521.png</string>
+				</dict>
+			</array>
+			<key>metadata</key>
+			<dict>
+				<key>bundle-identifier</key>
+				<string>com.Sxrhy.Yipintao.App</string>
+				<key>bundle-version</key>
+				<string>0.1.1113</string>
+				<key>kind</key>
+				<string>software</string>
+				<key>subtitle</key>
+				<string>App</string>
+				<key>title</key>
+				<string>豪多多</string>
+			</dict>
+		</dict>
+	</array>
+</dict>
 </plist>
